# HomeN-server

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.ai/: instructions.md
.claude/: settings.json  settings.local.json
.continue/: continue.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ✨-기능-명세-템플릿.md  ✨-기능-제안용-템플릿.md  🐛-백엔드-버그-템플릿.md  🐞-버그-수정용-템플릿-.md  🔄-리팩토링-템플릿.md  🚀-성능-개선-이슈-템플릿.md
.github/workflows/: deploy.yml
apps/homes/: apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/homes/migrations/: 0001_initial.py  0002_remove_homeimage_home_image_enum_chore_image_enum.py  0003_remove_home_creation_step.py  0004_chore_points_difficulty_3level.py  0005_chore_category_description_difficulty_5level.py  0006_chore_category_5_description_20_homechore_memo.py  0007_remove_homechore_memo_homechorenote.py  0008_chorecompletion.py
apps/homes/tests/: factories.py  test_serializers.py  test_services.py  test_views.py
apps/users/: admin_seeds.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_name_socialaccount.py  0004_user_avatar_name_maxlength.py  (+5 more)
common/: error_responses.py  exceptions.py  swagger.py
common/tests/: test_swagger.py
config/: settings.py  urls.py
docs/: README.md  api-conventions.md  architecture.md  git-conventions.md  migrations.md  swagger-conventions.md
specs/: homes.md  users.md
(+4 files in other folders)
